2.3/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: input-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts: 
        - myapp.example.com
      secretName: input-ingress-tls
  rules:
  - host: myapp.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
